--- a/arch/arm64/configs/lightning_exynos2100-r9sxxx_defconfig
+++ b/arch/arm64/configs/lightning_exynos2100-r9sxxx_defconfig
@@ -7449,3 +7449,8 @@ CONFIG_CORESIGHT_STM=y
 #
 # CONFIG_SEC_KUNIT is not set
 # end of KUnit support
+
+#
+# Lightning 
+#
+CONFIG_BOEFFLA_WL_BLOCKER=y
